--- a/ci/template.yml
+++ b/ci/template.yml
@@ -271,6 +271,12 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${GitHubWebhookEndpointFunction}
       RetentionInDays: 5
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: CI }
   GitHubWebhookEndpointErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -345,6 +351,12 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${BuildHandlerFunction}
       RetentionInDays: 5
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: CI }
   BuildHandlerErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -421,6 +433,12 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${StagingConfigHandlerFunction}
       RetentionInDays: 5
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: CI }
   StagingConfigHandlerErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -484,6 +502,12 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${GitHubStatusHandlerFunction}
       RetentionInDays: 5
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: CI }
   GitHubStatusHandlerErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -556,6 +580,12 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${SlackMessageHandlerFunction}
       RetentionInDays: 5
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: CI }
   SlackMessageHandlerErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
