--- a/ci/template.yml
+++ b/ci/template.yml
@@ -71,6 +71,7 @@ Parameters:
 Resources:
   # CodeBuild Project
   CiCodeBuildSourceArchiveBucket:
+    # TODO Remove, no longer used
     # The CI CodeBuild project has read access to this bucket, so code and
     # assets needed for builds can be placed in it
     Type: AWS::S3::Bucket
@@ -280,17 +281,11 @@ Resources:
   GitHubWebhookEndpointErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      ActionsEnabled: true
-      AlarmName: "[Infra][CI][Lambda][Errors] GitHub Webhook Endpoint" # TODO
-      AlarmActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      InsufficientDataActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      OKActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      AlarmDescription: >- # TODO
-        The error rate on the GitHub webhook endpoint lambda has exceeded 0 in
-        the last five minutes.
+      AlarmName: !Sub WARN [CI] GitHub webhook endpoint <prod> FUNCTION ERRORS (${AWS::StackName})
+      AlarmDescription: >-
+        The Lambda function that GitHub webhook requests for CI events is
+        failing, so some builds may not be starting as expected, and GitHub may
+        be receiving errors from the endpoint.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: FunctionName
@@ -360,17 +355,10 @@ Resources:
   BuildHandlerErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      ActionsEnabled: true
-      AlarmName: "[Infra][CI][Lambda][Errors] Build Handler" # TODO
-      AlarmActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      InsufficientDataActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      OKActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      AlarmDescription: >- # TODO
-        The error rate on the GitHub event handler lambda has exceeded 0 in
-        the last five minutes.
+      AlarmName: !Sub WARN [CI] Build handler <prod> FUNCTION ERRORS (${AWS::StackName})
+      AlarmDescription: >-
+        The Lambda function that triggers CI builds in CodeBuild is failing,
+        so some builds may not be starting as expected.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: FunctionName
@@ -442,17 +430,12 @@ Resources:
   StagingConfigHandlerErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      ActionsEnabled: true
-      AlarmName: "[Infra][CI][Lambda][Errors] Staging config Handler" # TODO
-      AlarmActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      InsufficientDataActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      OKActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      AlarmDescription: >- # TODO
-        The error rate on the staging config handler lambda has exceeded 0 in
-        the last five minutes.
+      AlarmName: !Sub WARN [CI] Staging config <prod> FUNCTION ERRORS (${AWS::StackName})
+      AlarmDescription: >-
+        The Lambda function that updates the CloudFormation template config
+        file for the staging root stack based on CI build artifacts is
+        failing, so some new app versions may not be deployed via CD as
+        expected.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: FunctionName
@@ -511,17 +494,11 @@ Resources:
   GitHubStatusHandlerErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      ActionsEnabled: true
-      AlarmName: "[Infra][CI][Lambda][Errors] GitHub status Handler" # TODO
-      AlarmActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      InsufficientDataActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      OKActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      AlarmDescription: >- # TODO
-        The error rate on the GitHub status handler lambda has exceeded 0 in
-        the last five minutes.
+      AlarmName: !Sub WARN [CI] GitHub status <prod> FUNCTION ERRORS (${AWS::StackName})
+      AlarmDescription: >-
+        The Lambda function that updates GitHub statuses based on CI build
+        events is failing, so some commits or branches may show inaccurate
+        information.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: FunctionName
@@ -589,17 +566,10 @@ Resources:
   SlackMessageHandlerErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      ActionsEnabled: true
-      AlarmName: "[Infra][CI][Lambda][Errors] Slack message Handler" # TODO
-      AlarmActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      InsufficientDataActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      OKActions:
-        - Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn
-      AlarmDescription: >- # TODO
-        The error rate on the Slack message handler lambda has exceeded 0 in
-        the last five minutes.
+      AlarmName: !Sub WARN [CI] Slack messager <prod> FUNCTION ERRORS (${AWS::StackName})
+      AlarmDescription: >-
+        The Lambda function that sends messages to Slack based on CI build
+        events is failing, so some notifications may be getting lost.
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: FunctionName
