Fix Elasticsearch ports

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -482,9 +482,13 @@ Resources:
       GroupDescription: !Sub CMS ${EnvironmentType} Elasticsearch security group
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 9200
+          FromPort: 443
           SourceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
-          ToPort: 9200
+          ToPort: 443
+        - IpProtocol: tcp
+          FromPort: 9243
+          SourceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
+          ToPort: 9243
       Tags:
         - { Key: Name, Value: !Sub "${RootStackName}_cms_elasticsearch" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
