--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -218,8 +218,8 @@ Resources:
       Egress: false
       NetworkAclId: !Ref PrivateNetworkAcl
       PortRange:
-        From: 9200
-        To: 9200
+        From: 9243
+        To: 9243
       Protocol: 6 # TCP
       RuleAction: allow
       RuleNumber: 560
@@ -230,11 +230,35 @@ Resources:
       Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
       NetworkAclId: !Ref PrivateNetworkAcl
       PortRange:
-        From: 9200
-        To: 9200
+        From: 9243
+        To: 9243
       Protocol: 6 # TCP
       RuleAction: allow
       RuleNumber: 561
+  InboundIpV4ElasticsearchHttpsNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: false
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 443
+        To: 443
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 562
+  InboundIpV6ElasticsearchHttpsNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 443
+        To: 443
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 563
 
   # INGRESS 580
   # Allows inbound Sphinx traffic from all IPs within the VPC (e.g., an
