Add ES access policy

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -501,7 +501,14 @@ Resources:
   ElasticsearchDomain:
     Type: AWS::Elasticsearch::Domain
     Properties:
-      # AccessPolicies: Json
+      AccessPolicies:
+        Statement:
+          - Action: es:*
+            Effect: Allow
+            Principal:
+              AWS: "*"
+            Resource: !Sub arn:${AWS::Partition}:es:${AWS::Region}:${AWS::AccountId}:domain/*
+        Version: "2012-10-17"
       AdvancedSecurityOptions:
         Enabled: false
       DomainEndpointOptions:
