--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -333,7 +333,7 @@ Resources:
             - Name: DATABASE_POOL_SIZE
               Value: !Ref kDatabasePoolSize
             - Name: ELASTICSEARCH_URL
-              Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}:9200
+              Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}
             - Name: FEEDER_HOST
               Value: !Ref FeederHostname
             - Name: ID_HOST
@@ -428,7 +428,7 @@ Resources:
             - Name: DATABASE_POOL_SIZE
               Value: !Ref kDatabasePoolSize
             - Name: ELASTICSEARCH_URL
-              Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}:9200
+              Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}
             - Name: FEEDER_HOST
               Value: !Ref FeederHostname
             - Name: ID_HOST
