Fix tags on runTask

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -739,14 +739,14 @@ Resources:
           startedBy: STARTED_BY,
           taskDefinition: process.env.ECS_TASK_DEFINITION_ARN,
           tags: [
-            { Key: "prx:meta:tagging-version", Value: "2021-04-07" },
-            { Key: "prx:cloudformation:stack-name", Value: process.env.STACK_NAME },
-            { Key: "prx:cloudformation:stack-id", Value: process.env.STACK_ID },
-            { Key: "prx:cloudformation:root-stack-name", Value: process.env.ROOT_STACK_NAME },
-            { Key: "prx:cloudformation:root-stack-id", Value: process.env.ROOT_STACK_ID },
-            { Key: "prx:ops:environment", Value: process.env.ENVIRONMENT_TYPE },
-            { Key: "prx:dev:family", Value: "Dovetail" },
-            { Key: "prx:dev:application", Value: "Augury" },
+            { key: "prx:meta:tagging-version", value: "2021-04-07" },
+            { key: "prx:cloudformation:stack-name", value: process.env.STACK_NAME },
+            { key: "prx:cloudformation:stack-id", value: process.env.STACK_ID },
+            { key: "prx:cloudformation:root-stack-name", value: process.env.ROOT_STACK_NAME },
+            { key: "prx:cloudformation:root-stack-id", value: process.env.ROOT_STACK_ID },
+            { key: "prx:ops:environment", value: process.env.ENVIRONMENT_TYPE },
+            { key: "prx:dev:family", value: "Dovetail" },
+            { key: "prx:dev:application", value: "Augury" },
           ],
         };
 
