Create a new target group

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -54,7 +54,7 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
       Actions:
-        - TargetGroupArn: !Ref WebTargetGroup
+        - TargetGroupArn: !Ref WebTargetGroup2
           Type: forward
       Conditions:
         - Field: host-header
@@ -302,7 +302,7 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Feeder }
 
-  WebTargetGroup:
+  WebTargetGroup2:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
       HealthCheckIntervalSeconds: 15
@@ -339,7 +339,7 @@ Resources:
         - Name: LoadBalancer
           Value: !Ref AlbFullName
         - Name: TargetGroup
-          Value: !GetAtt WebTargetGroup.TargetGroupFullName
+          Value: !GetAtt WebTargetGroup2.TargetGroupFullName
       EvaluationPeriods: 1
       MetricName: HTTPCode_Target_5XX_Count
       Namespace: AWS/ApplicationELB
@@ -377,7 +377,7 @@ Resources:
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
           ContainerPort: !Ref kWebApplicationPort
-          TargetGroupArn: !Ref WebTargetGroup
+          TargetGroupArn: !Ref WebTargetGroup2
       PropagateTags: TASK_DEFINITION
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -559,4 +559,4 @@ Resources:
 
 Outputs:
   WebTargetGroupFullName:
-    Value: !GetAtt WebTargetGroup.TargetGroupFullName
+    Value: !GetAtt WebTargetGroup2.TargetGroupFullName
