--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -695,7 +695,6 @@ Resources:
           SECURITY_GROUP_1: !GetAtt SlowWorkerSecurityGroup.GroupId
           SECURITY_GROUP_2: !Ref EcsLaunchEndpointsAccessSecurityGroupId
           SECURITY_GROUP_3: !Ref KmsEndpointAccessSecurityGroupId
-          MAX_FARGATES: "2"
           STARTED_BY: !Ref AWS::StackName
           ENVIRONMENT_TYPE: !Ref EnvironmentType
           ROOT_STACK_ID: !Ref RootStackId
@@ -712,63 +711,98 @@ Resources:
       InlineCode: |
         const AWS = require('aws-sdk');
         const ecs = new AWS.ECS();
-
-        const MAX_FARGATES = process.env.MAX_FARGATES;
-        const STARTED_BY = process.env.STARTED_BY;
+        const QUEUE_CONCURRENCY = { slow: 2, slow_ted: 1 };
 
         // ECS listTask parameters
-        const listParams = {
-          cluster: process.env.ECS_CLUSTER_ARN,
-          desiredStatus: 'RUNNING',
-          maxResults: MAX_FARGATES,
-          startedBy: STARTED_BY,
+        const startedBy = (name) => `${process.env.STARTED_BY}-${name}`;
+        const listParams = (name) => {
+          return {
+            cluster: process.env.ECS_CLUSTER_ARN,
+            desiredStatus: 'RUNNING',
+            maxResults: 10,
+            startedBy: startedBy(name),
+          };
         };
 
         // ECS runTask parameters
-        const runParams = {
-          cluster: process.env.ECS_CLUSTER_ARN,
-          launchType: 'FARGATE',
-          networkConfiguration: {
-            awsvpcConfiguration: {
-              subnets: [process.env.VPC_SUBNET_1, process.env.VPC_SUBNET_2, process.env.VPC_SUBNET_3],
-              assignPublicIp: 'DISABLED',
-              securityGroups: [process.env.SECURITY_GROUP_1, process.env.SECURITY_GROUP_2, process.env.SECURITY_GROUP_3],
+        const runParams = (name) => {
+          return {
+            cluster: process.env.ECS_CLUSTER_ARN,
+            launchType: 'FARGATE',
+            networkConfiguration: {
+              awsvpcConfiguration: {
+                subnets: [
+                  process.env.VPC_SUBNET_1,
+                  process.env.VPC_SUBNET_2,
+                  process.env.VPC_SUBNET_3,
+                ],
+                assignPublicIp: 'DISABLED',
+                securityGroups: [
+                  process.env.SECURITY_GROUP_1,
+                  process.env.SECURITY_GROUP_2,
+                  process.env.SECURITY_GROUP_3,
+                ],
+              },
             },
-          },
-          platformVersion: '1.4.0',
-          startedBy: STARTED_BY,
-          taskDefinition: process.env.ECS_TASK_DEFINITION_ARN,
-          tags: [
-            { key: "prx:meta:tagging-version", value: "2021-04-07" },
-            { key: "prx:cloudformation:stack-name", value: process.env.STACK_NAME },
-            { key: "prx:cloudformation:stack-id", value: process.env.STACK_ID },
-            { key: "prx:cloudformation:root-stack-name", value: process.env.ROOT_STACK_NAME },
-            { key: "prx:cloudformation:root-stack-id", value: process.env.ROOT_STACK_ID },
-            { key: "prx:ops:environment", value: process.env.ENVIRONMENT_TYPE },
-            { key: "prx:dev:family", value: "Dovetail" },
-            { key: "prx:dev:application", value: "Augury" },
-          ],
+            overrides: {
+              containerOverrides: [
+                {
+                  name: 'augury-workslow',
+                  environment: [
+                    {
+                      name: 'QUEUE',
+                      value: name,
+                    },
+                  ],
+                },
+              ],
+            },
+            platformVersion: '1.4.0',
+            startedBy: startedBy(name),
+            taskDefinition: process.env.ECS_TASK_DEFINITION_ARN,
+            tags: [
+              { key: 'prx:meta:tagging-version', value: '2021-04-07' },
+              { key: 'prx:cloudformation:stack-name', value: process.env.STACK_NAME },
+              { key: 'prx:cloudformation:stack-id', value: process.env.STACK_ID },
+              {
+                key: 'prx:cloudformation:root-stack-name',
+                value: process.env.ROOT_STACK_NAME,
+              },
+              {
+                key: 'prx:cloudformation:root-stack-id',
+                value: process.env.ROOT_STACK_ID,
+              },
+              { key: 'prx:ops:environment', value: process.env.ENVIRONMENT_TYPE },
+              { key: 'prx:dev:family', value: 'Dovetail' },
+              { key: 'prx:dev:application', value: 'Augury' },
+            ],
+          };
         };
 
         // lightweight json logger
         function log(level, msg, extra = {}) {
-          console[level](JSON.stringify({level, msg, ...extra}));
+          console[level](JSON.stringify({ level, msg, ...extra }));
         }
 
         exports.handler = async (event) => {
-          const listRes = await ecs.listTasks(listParams).promise();
+          const queueName = event?.Records?.shift()?.body || '';
+          if (!QUEUE_CONCURRENCY[queueName]) {
+            return log('warn', `unknown queue ${queueName}`);
+          }
+
+          const listRes = await ecs.listTasks(listParams(queueName)).promise();
           const running = listRes.taskArns.length;
-          if (running < MAX_FARGATES) {
-            log('info', `launching 1 more fargate worker (${running} running)`);
+          if (running < QUEUE_CONCURRENCY[queueName]) {
+            log('info', `launching 1 more ${queueName} worker (${running} running)`);
             try {
-              const runRes = await ecs.runTask(runParams).promise();
+              const runRes = await ecs.runTask(runParams(queueName)).promise();
               log('debug', 'ran task', runRes);
             } catch (err) {
               log('error', 'error running task', err);
               throw err;
             }
           } else {
-            log('info', `already running ${running} fargate workers`);
+            log('info', `already running ${running} ${queueName} workers`);
           }
         };
       MemorySize: 128
