Add DMARC records

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -125,6 +125,47 @@ Resources:
           TTL: "300"
           Type: TXT
           Name: !Sub zendesk_verification.${Domain}
+
+  Dmarc:
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      Comment: DMARC
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        # Amazon SES us-east-1
+        - Name: !Sub feedback-smtp-us-east-1-amazonses.${Domain}
+          ResourceRecords:
+            - "10 feedback-smtp.us-east-1.amazonses.com."
+          TTL: "3600"
+          Type: MX
+        - Name: !Sub feedback-smtp-us-east-1-amazonses.${Domain}
+          ResourceRecords:
+            - '"v=spf1 include:amazonses.com ~all"'
+          TTL: "3600"
+          Type: TXT
+        # Amazon SES us-east-2
+        - Name: !Sub feedback-smtp-us-east-2-amazonses.${Domain}
+          ResourceRecords:
+            - "10 feedback-smtp.us-east-2.amazonses.com."
+          TTL: "3600"
+          Type: MX
+        - Name: !Sub feedback-smtp-us-east-2-amazonses.${Domain}
+          ResourceRecords:
+            - '"v=spf1 include:amazonses.com ~all"'
+          TTL: "3600"
+          Type: TXT
+        # Amazon SES us-west-2
+        - Name: !Sub feedback-smtp-us-west-2-amazonses.${Domain}
+          ResourceRecords:
+            - "10 feedback-smtp.us-west-2.amazonses.com."
+          TTL: "3600"
+          Type: MX
+        - Name: !Sub feedback-smtp-us-west-2-amazonses.${Domain}
+          ResourceRecords:
+            - '"v=spf1 include:amazonses.com ~all"'
+          TTL: "3600"
+          Type: TXT
+
   Verification:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
