--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -205,3 +205,7 @@ Resources:
         # Bubble Trouble
         - { Type: A, Name: !Sub "pf1022mnbt.${Domain}", AliasTarget: { DNSName: "doy3l2ymgon88.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf1022mnbt.${Domain}", AliasTarget: { DNSName: "doy3l2ymgon88.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Bubble Trouble
+        - { Type: A, Name: !Sub "pf7042hzpd.${Domain}", AliasTarget: { DNSName: "d2g5n0ruajrs5n.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf7042hzpd.${Domain}", AliasTarget: { DNSName: "d2g5n0ruajrs5n.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
