Fix This Is Dating records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -211,5 +211,5 @@ Resources:
         - { Type: AAAA, Name: !Sub "pf7042hzpd.${Domain}", AliasTarget: { DNSName: "d2g5n0ruajrs5n.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
         # This Is Dating
-        - { Type: A, Name: !Sub "pf1022mnbt.${Domain}", AliasTarget: { DNSName: "d1ozaymewcttrv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
-        - { Type: AAAA, Name: !Sub "pf1022mnbt.${Domain}", AliasTarget: { DNSName: "d1ozaymewcttrv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A, Name: !Sub "pf3663tidp.${Domain}", AliasTarget: { DNSName: "d1ozaymewcttrv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf3663tidp.${Domain}", AliasTarget: { DNSName: "d1ozaymewcttrv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
