Move some CMS envars into task def

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -314,6 +314,10 @@ Resources:
               Value: cms
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
+            - Name: AWS_ACCOUNT_ID
+              Value: !Ref AWS::AccountId
+            - Name: AWS_REGION
+              Value: !Ref AWS::Region
             - Name: AWS_SECRETS_BASE
               Value: !Ref SecretsBase
             - Name: AWS_SECRETS_VERSION
@@ -409,6 +413,10 @@ Resources:
               Value: cms
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
+            - Name: AWS_ACCOUNT_ID
+              Value: !Ref AWS::AccountId
+            - Name: AWS_REGION
+              Value: !Ref AWS::Region
             - Name: AWS_SECRETS_BASE
               Value: !Ref SecretsBase
             - Name: AWS_SECRETS_VERSION
