Pass Porter SNS ARN to Networks task def

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -311,6 +311,7 @@ Resources:
         KmsEndpointAccessSecurityGroupId: !Ref KmsEndpointAccessSecurityGroupId
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
+        PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
