--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -52,6 +52,7 @@ Parameters:
   KmsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
+  PorterJobExecutionSnsTopicArn: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -273,6 +274,8 @@ Resources:
               Value: "true"
             - Name: RAILS_PORT
               Value: !Ref kWebApplicationPort
+            - Name: PORTER_SNS_TOPIC
+              Value: !Ref PorterJobExecutionSnsTopicArn
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -631,6 +634,8 @@ Resources:
               Value: "true"
             - Name: RAILS_PORT
               Value: !Ref kWebApplicationPort
+            - Name: PORTER_SNS_TOPIC
+              Value: !Ref PorterJobExecutionSnsTopicArn
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
