Pass site host envar to Networks task def

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -50,6 +50,7 @@ Parameters:
   FeederHostname: { Type: String }
   IdHostname: { Type: String }
   MetricsHostname: { Type: String }
+  NetworksHostname: { Type: String }
   PlayHostname: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
@@ -312,6 +313,7 @@ Resources:
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
+        NetworksHostname: !Ref NetworksHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
