--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -53,6 +53,7 @@ Parameters:
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
+  NetworksHostname: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -276,6 +277,8 @@ Resources:
               Value: !Ref kWebApplicationPort
             - Name: PORTER_SNS_TOPIC
               Value: !Ref PorterJobExecutionSnsTopicArn
+            - Name: SITE_HOST
+              Value: !Ref NetworksHostname
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -636,6 +639,8 @@ Resources:
               Value: !Ref kWebApplicationPort
             - Name: PORTER_SNS_TOPIC
               Value: !Ref PorterJobExecutionSnsTopicArn
+            - Name: SITE_HOST
+              Value: !Ref NetworksHostname
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
