--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -234,6 +234,7 @@ Resources:
       FeederHostname: !If [IsProduction, feeder.prx.org, feeder.staging.prx.tech]
       IdHostname: !If [IsProduction, id.prx.org, id.staging.prx.tech]
       MetricsHostname: !If [IsProduction, metrics.prx.org, metrics.staging.prx.tech]
+      NetworksHostname: !If [IsProduction, networks.prx.org, networks.staging.prx.tech]
       PlayHostname: !If [IsProduction, play.prx.org, play.staging.prx.tech]
       AdFilesHostname: a.prxu.org
       MetaHostname: meta.prx.org
@@ -863,6 +864,7 @@ Resources:
         FeederHostname: !GetAtt Constants.FeederHostname
         IdHostname: !GetAtt Constants.IdHostname
         MetricsHostname: !GetAtt Constants.MetricsHostname
+        NetworksHostname: !GetAtt Constants.NetworksHostname
         PlayHostname: !GetAtt Constants.PlayHostname
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
