Pass Networks bucket param

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -54,6 +54,7 @@ Parameters:
   SharedAuroraMysqlPort: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
   NetworksHostname: { Type: String }
+  NetworksS3BucketArn: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
