--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -874,6 +874,7 @@ Resources:
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
         FeedsS3BucketArn: !Ref FeedsS3BucketArn
         MediajointS3BucketArn: !Ref MediajointS3BucketArn
+        NetworksS3BucketArn: !Ref NetworksS3BucketArn
 
         # App-specific parameters
 
