Pass SQS prefix param

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -316,6 +316,7 @@ Resources:
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
         NetworksHostname: !Ref NetworksHostname
         NetworksS3BucketArn: !Ref NetworksS3BucketArn
+        AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
