--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -55,6 +55,7 @@ Parameters:
   PorterJobExecutionSnsTopicArn: { Type: String }
   NetworksHostname: { Type: String }
   NetworksS3BucketArn: { Type: String }
+  AnnounceResourcePrefix: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
