Use dynamic partitions

--- a/stacks/apps/backsaw.yml
+++ b/stacks/apps/backsaw.yml
@@ -54,7 +54,7 @@ Resources:
             Effect: Allow
             Principal:
               AWS: !Ref StaticSiteCloudFrontOai
-            Resource: !Sub arn:aws:s3:::${BacksawBucket}/*
+            Resource: !Sub arn:${AWS::Partition}:s3:::${BacksawBucket}/*
             Sid: Grant read access to a CloudFront Origin Identity
 
 Outputs:
