--- a/stacks/apps/beta.yml
+++ b/stacks/apps/beta.yml
@@ -53,7 +53,7 @@ Resources:
             Effect: Allow
             Principal:
               AWS: !Ref StaticSiteCloudFrontOai
-            Resource: !Sub arn:aws:s3:::${BetaBucket}/*
+            Resource: !Sub arn:${AWS::Partition}:s3:::${BetaBucket}/*
             Sid: Grant read access to a CloudFront Origin Identity
 
 Outputs:
