--- a/stacks/apps/dovetail-cdn-arranger.yml
+++ b/stacks/apps/dovetail-cdn-arranger.yml
@@ -107,7 +107,7 @@ Resources:
         - !Ref FfmpegBinaryLayer
         - !If
           - IsProduction
-          - !Sub arn:aws:lambda:${AWS::Region}:580247275435:layer:LambdaInsightsExtension:14
+          - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:580247275435:layer:LambdaInsightsExtension:14
           - !Ref AWS::NoValue
       MemorySize: 8000
       Runtime: nodejs14.x
@@ -119,7 +119,7 @@ Resources:
                 - dynamodb:GetItem
                 - dynamodb:PutItem
               Effect: Allow
-              Resource: !Sub arn:aws:dynamodb:*:*:table/${ArrangementsDynamodbTableName}
+              Resource: !Sub arn:${AWS::Partition}:dynamodb:*:*:table/${ArrangementsDynamodbTableName}
           Version: "2012-10-17"
         - Statement:
             - Action: sts:AssumeRole
