--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -230,7 +230,7 @@ Resources:
             Statement:
               - Action: sqs:* # TODO Seems very permissive
                 Effect: Allow
-                Resource: !Sub arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}* # TODO Use specific queues, the ones in this template and the email on from shared-announce
+                Resource: !Sub arn:${AWS::Partition}:sqs:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}* # TODO Use specific queues, the ones in this template and the email on from shared-announce
             Version: "2012-10-17"
           PolicyName: SqsQueues
         - PolicyDocument:
