--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -90,7 +90,7 @@ Resources:
         Statement:
           - Action: autoscaling:SetInstanceHealth
             Effect: Allow
-            Resource: !Sub arn:aws:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${Asg}
+            Resource: !Sub arn:${AWS::Partition}:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${Asg}
         Version: "2012-10-17"
       Roles:
         - !Ref InstanceRole
