--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -176,10 +176,10 @@ Resources:
             Statement:
               - Action: sqs:* # TODO Seems very permissive
                 Effect: Allow
-                Resource: !Sub arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}*
+                Resource: !Sub arn:${AWS::Partition}:sqs:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}*
               - Action: sns:* # TODO Seems very permissive
                 Effect: Allow
-                Resource: !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}*
+                Resource: !Sub arn:${AWS::Partition}:sns:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}*
             Version: "2012-10-17"
           PolicyName: Announce
         - PolicyDocument:
