--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -93,7 +93,7 @@ Resources:
       Layers:
         - Fn::If:
             - IsProduction
-            - !Sub arn:aws:lambda:${AWS::Region}:580247275435:layer:LambdaInsightsExtension:14
+            - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:580247275435:layer:LambdaInsightsExtension:14
             - !Ref AWS::NoValue
       MemorySize: 2000
       Runtime: nodejs14.x
