--- a/stacks/apps/publish.yml
+++ b/stacks/apps/publish.yml
@@ -325,7 +325,7 @@ Resources:
           - Action: s3:GetObject
             Effect: Allow
             Principal:
-              AWS: !Sub arn:aws:iam::cloudfront:user/CloudFront Origin Access Identity ${CloudFrontOriginAccessIdentity}
+              AWS: !Sub arn:${AWS::Partition}:iam::cloudfront:user/CloudFront Origin Access Identity ${CloudFrontOriginAccessIdentity}
             Resource: !Sub ${PublishUploadsBucket.Arn}/*
             Sid: Grant read access to a CloudFront Origin Identity
         Version: "2012-10-17"
