--- a/cdn/dovetail-cdn.yml
+++ b/cdn/dovetail-cdn.yml
@@ -138,87 +138,87 @@ Resources:
     Properties:
       CloudFrontOriginAccessIdentityConfig:
         Comment: !If [IsProduction, "Dovetail CDN Production", "Dovetail CDN Staging"]
-  CloudFrontDistribution400Alarm:
-    Type: "AWS::CloudWatch::Alarm"
-    Properties:
-      ActionsEnabled: true
-      AlarmName: !Join ["", ["[", !Ref DistributionDomain, "][ErrorRate] 4XX"]]
-      AlarmActions:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      InsufficientDataActions:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      OKActions:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      AlarmDescription: >
-        The 4xx rate on the Dovetail stitch CDN is too dang high
-      ComparisonOperator: GreaterThanThreshold
-      Dimensions:
-        - Name: Region
-          Value: Global
-        - Name: DistributionId
-          Value: !Ref CloudFrontDistribution
-      EvaluationPeriods: 2
-      MetricName: 4xxErrorRate
-      Namespace: AWS/CloudFront
-      Period: 300
-      Statistic: Average
-      Threshold: 30
-      TreatMissingData: notBreaching
-      Unit: Percent
-  CloudFrontDistribution500Alarm:
-    Type: "AWS::CloudWatch::Alarm"
-    Properties:
-      ActionsEnabled: true
-      AlarmName: !Join ["", ["[", !Ref DistributionDomain, "][ErrorRate] 5XX"]]
-      AlarmActions:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      InsufficientDataActions:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      OKActions:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-      AlarmDescription: >
-        The error rate on the Dovetail stitch CDN is too dang high
-      ComparisonOperator: GreaterThanThreshold
-      Dimensions:
-        - Name: Region
-          Value: Global
-        - Name: DistributionId
-          Value: !Ref CloudFrontDistribution
-      EvaluationPeriods: 5
-      MetricName: 5xxErrorRate
-      Namespace: AWS/CloudFront
-      Period: 60
-      Statistic: Average
-      Threshold: 0.5
-      TreatMissingData: notBreaching
-      Unit: Percent
-  CloudFrontDistributionFatal500Alarm:
-    Type: "AWS::CloudWatch::Alarm"
-    Properties:
-      ActionsEnabled: true
-      AlarmName: !Join ["", ["[", !Ref DistributionDomain, "][ErrorRate] Fatal 5XX"]]
-      AlarmActions:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
-      InsufficientDataActions:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
-      OKActions:
-        - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
-      AlarmDescription: >
-        The error rate on the Dovetail stitch CDN is too dang high
-      ComparisonOperator: GreaterThanThreshold
-      Dimensions:
-        - Name: Region
-          Value: Global
-        - Name: DistributionId
-          Value: !Ref CloudFrontDistribution
-      EvaluationPeriods: 3
-      MetricName: 5xxErrorRate
-      Namespace: AWS/CloudFront
-      Period: 60
-      Statistic: Average
-      Threshold: 2.0
-      TreatMissingData: notBreaching
-      Unit: Percent
+  # CloudFrontDistribution400Alarm:
+  #   Type: "AWS::CloudWatch::Alarm"
+  #   Properties:
+  #     ActionsEnabled: true
+  #     AlarmName: !Join ["", ["[", !Ref DistributionDomain, "][ErrorRate] 4XX"]]
+  #     AlarmActions:
+  #       - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+  #     InsufficientDataActions:
+  #       - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+  #     OKActions:
+  #       - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+  #     AlarmDescription: >
+  #       The 4xx rate on the Dovetail stitch CDN is too dang high
+  #     ComparisonOperator: GreaterThanThreshold
+  #     Dimensions:
+  #       - Name: Region
+  #         Value: Global
+  #       - Name: DistributionId
+  #         Value: !Ref CloudFrontDistribution
+  #     EvaluationPeriods: 2
+  #     MetricName: 4xxErrorRate
+  #     Namespace: AWS/CloudFront
+  #     Period: 300
+  #     Statistic: Average
+  #     Threshold: 30
+  #     TreatMissingData: notBreaching
+  #     Unit: Percent
+  # CloudFrontDistribution500Alarm:
+  #   Type: "AWS::CloudWatch::Alarm"
+  #   Properties:
+  #     ActionsEnabled: true
+  #     AlarmName: !Join ["", ["[", !Ref DistributionDomain, "][ErrorRate] 5XX"]]
+  #     AlarmActions:
+  #       - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+  #     InsufficientDataActions:
+  #       - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+  #     OKActions:
+  #       - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+  #     AlarmDescription: >
+  #       The error rate on the Dovetail stitch CDN is too dang high
+  #     ComparisonOperator: GreaterThanThreshold
+  #     Dimensions:
+  #       - Name: Region
+  #         Value: Global
+  #       - Name: DistributionId
+  #         Value: !Ref CloudFrontDistribution
+  #     EvaluationPeriods: 5
+  #     MetricName: 5xxErrorRate
+  #     Namespace: AWS/CloudFront
+  #     Period: 60
+  #     Statistic: Average
+  #     Threshold: 0.5
+  #     TreatMissingData: notBreaching
+  #     Unit: Percent
+  # CloudFrontDistributionFatal500Alarm:
+  #   Type: "AWS::CloudWatch::Alarm"
+  #   Properties:
+  #     ActionsEnabled: true
+  #     AlarmName: !Join ["", ["[", !Ref DistributionDomain, "][ErrorRate] Fatal 5XX"]]
+  #     AlarmActions:
+  #       - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+  #     InsufficientDataActions:
+  #       - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+  #     OKActions:
+  #       - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
+  #     AlarmDescription: >
+  #       The error rate on the Dovetail stitch CDN is too dang high
+  #     ComparisonOperator: GreaterThanThreshold
+  #     Dimensions:
+  #       - Name: Region
+  #         Value: Global
+  #       - Name: DistributionId
+  #         Value: !Ref CloudFrontDistribution
+  #     EvaluationPeriods: 3
+  #     MetricName: 5xxErrorRate
+  #     Namespace: AWS/CloudFront
+  #     Period: 60
+  #     Statistic: Average
+  #     Threshold: 2.0
+  #     TreatMissingData: notBreaching
+  #     Unit: Percent
 Outputs:
   CloudFrontDomainName:
     Value: !GetAtt CloudFrontDistribution.DomainName
